<resources>
    <string name="app_name">El Barbero App(Test)</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">Logo oficial de El Barbero</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_slogan">You never get second chance to make a first impression</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_list_main_image">Imagen representativa para cada peinado</string>
    <string name="item_list_main_title">Título</string>
    <string name="item_list_main_description">Descripción</string>
    <string name="item_list_main_price">Precio</string>
    <string name="list_main_empty">No hay datos para mostrar</string>
    <string name="option_main_menu_franq">Franquicias</string>
    <string name="option_main_menu_contact">Contacto</string>
    <string name="option_about">Acerca de</string>
    <string name="nav_opt_home">Inicio</string>
    <string name="nav_opt_products">Productos</string>
    <string name="nav_opt_date">Programar cita</string>
    <string name="nav_opt_settings">Ajustes</string>
    <string name="title_activity_products">Productos</string>
    <string name="list_products_empty">No hay datos para mostrar</string>
    <string name="item_list_product_name">Nombre producto</string>
    <string name="item_list_product_price">Precio Producto</string>
    <string name="title_activity_settings">Ajustes</string>

    <string name="pref_category_name_asistencia">Asistencia</string>
    <string name="pref_opt_name_help_Center">Centro de ayuda</string>
    <string name="pref_opt_privacity_politic_mb">Política de Privacidad MINDBODY</string>
    <string name="pref_opt_privacity_ploitic_ebcr">Política de Privacidad ElBarberoCR</string>
    <string name="pref_opt_version_app">Versión 1.0.0</string>
    <string name="pref_category_name_adjust">Ajustes</string>

    <string name="pref_opt_settings_date">Calendario</string>
    <string-array name="pref_opt_date_values">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string-array name="pref_opt_date_entries">
        <item>Ninguno</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>90 min</item>
        <item>120 min</item>
    </string-array>
    <string name="pref_opt_settings_language">Idioma</string>
    <string-array name="pref_opt_languages_values">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string-array name="pref_opt_language_entries">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="pref_category_name_email_notf">Correos y notificaciones</string>
    <string name="pref_opt_send_comf_email">Enviarme correo de confirmación</string>
    <string name="pref_opt_send_comf_email_summary">Recibir correos de confirmación al reservar y comprar en la aplicación</string>
    <string name="pref_opt_send_notf_mov">Enviarme notificaciones por móvil</string>
    <string name="pref_opt_send_notf_mov_summary">Recivir notificaciones de esta empresa</string>

    <string name="cancel_button">Cancelar</string>
    <string name="title_activity_program_date">Programar cita</string>
    <string name="title_activity_about">Acerca dey</string>

    <string name="item_price">Precio: {0} colones.</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="title_activity_register">Registro</string>

    <string name="login_image_description">Imagen representativa para la pantalla de login</string>
    <string name="login_etx_username_hit">Nombre de usuario o correo</string>
    <string name="login_etx_password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_or">O</string>
    <string name="login_register_button">Crear nueva cuenta</string>
    <string name="login_facebook_option">Facebook</string>
    <string name="login_google_option">Google</string>
    <string name="login_options">Iniciar sesión con:</string>
    <string name="register_image_description">Imagen representativa para la pantalla de registro</string>
    <string name="register_etx_user_name_hint">Nombre</string>
    <string name="register_etx_user_last_name_hint">Apellido</string>
    <string name="register_etx_username_hint">Escriba su nombre de usuario</string>
    <string name="register_etx_email_hint">Escriba su correo electrónico</string>
    <string name="register_etx_password_hint">Escriba su contraseña</string>
    <string name="register_etx_password_validate_hint">Vuelva a escribir su contraseña</string>
    <string name="register_button">Crear cuenta</string>

    <string name="about_image_description">Imagen representativa para pantalla de acerca de</string>
    <string name="about_txt_info_email">Más información al correo: </string>
    <string name="about_txt_info_email_value">info@elbarberocr.com</string>
    <string name="about_place_santa_ana">Santa Ana: 2282–9922</string>
    <string name="about_place_pinares">Pinares: 2271–4747</string>
    <string name="about_place_heredia">Heredia: 2260–9777</string>
    <string name="about_place_alajuela">Alajuela: 2430–1081</string>
    <string name="about_social_networks">Nuestras redes sociales:</string>
    <string name="about_facebook_image_description">Imagen representativa del contacto en Facebook</string>
    <string name="about_instagram_image_description">Imagen representativa del contacto en Instamgram</string>
    <string name="about_youtube_image_description">Imagen representativa del contacto en YouTube</string>
    <string name="about_footer_copyrights_info">© 2018 El Barbero Gentlemen\'s Shop</string>
    <string name="about_developer_info">Desarrollado por: Adrián Amador</string>
</resources>
