<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_opt_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/nav_opt_products" />
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/ic_date"
            android:title="@string/nav_opt_date" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_opt_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/option_about"/>
    </group>

</menu>
