<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="develop.elbarberoapptest.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/login_image_description"
                android:scaleType="fitXY"
                android:src="@drawable/login_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etx_username"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login_etx_username_hit"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_login" />

            <EditText
                android:id="@+id/etx_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login_etx_password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etx_username" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="32dp"
                android:background="@color/login_button"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etx_password" />

            <TextView
                android:id="@+id/txt_login_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/login_options"
                app:layout_constraintEnd_toStartOf="@+id/txt_login_or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <ImageButton
                android:id="@+id/ibtn_google_option"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/ibtn_facebook_option"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_options"
                app:srcCompat="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/ibtn_facebook_option"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/btn_register_option"
                app:layout_constraintStart_toEndOf="@+id/ibtn_google_option"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_options"
                app:srcCompat="@drawable/ic_square_facebook" />

            <Button
                android:id="@+id/btn_register_option"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login_register_button"
                android:textColor="#0e2cef"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibtn_facebook_option"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_or" />

            <TextView
                android:id="@+id/txt_login_or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/login_or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_login_options"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
